codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__local_usage_all_provider_tokens_wide.snap
---
source: tui/src/chatwidget/tests/local_usage_advanced.rs
expression: "render_bottom_popup(&chat, 72)"
---
  All local statistics

↑
      Coverage events:
  6. capture_started
     2
      Token observations:
  7. complete
     1
      Provider tokens (provenance first):
› 8. input_tokens
     provenance provider_reported · repository CodexMulti · measured 120
     · exact 120 · unknown 0 · observations 1
  9. Counts
↓
  enter select · esc back
