codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__local_usage_chat_partial.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: rendered
---
  Current chat statistics


› 1. Report                usageSummary v1 · database schema 3 ·
                           taxonomy 1
  2. Scope                 current chat (thread)
  3. Account               primary
  4. Time range            10 to 20 ms UTC
  5. Coverage              partial · gaps: yes
      Coverage events:
  6. capture_started       2
      Token observations:
↓
  enter select · esc back
