codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__local_usage_menu_wide.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Usage


› 1. Current chat statistics   View local token, tool, and activity accounting.
  2. All local statistics      View full collector coverage, provenance, tokens,
                               tools, and time.
  3. Repository statistics     Choose a repository report.
  4. Show usage                View recent account token usage.
  5. Redeem usage limit reset  Check availability.

  enter open · esc back
