codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_menu_narrow.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "render_bottom_popup(&chat, 40)"
---
  Usage


› 1. Show usage
     View recent account token usage.
  2. Redeem usage limit reset
     2 available.

  enter open · esc back
